--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </p>
       </section>
 
-      <section class="image">
+      <section class="image" id="img01">
         <p>
 
           Não é mais como era antes <br>
@@ -70,7 +70,7 @@
         </p>
       </section>
 
-      <section class="image">
+      <section class="image" id="img02">
           <p>
 
           Tenho saudade das cartas <br>
